--- a/index.html
+++ b/index.html
@@ -7,14 +7,13 @@
     <link rel="stylesheet" href="assets/css/reset.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Portfolio 2</title>
+    <title>Rafael Pinto | Portfólio</title>
 </head>
-
 <body>
 
 
     <header id="header">
-        <nav class="navbar navbar-expand-sm navbar-light bg-secondary">
+        <nav class="navbar navbar-expand-sm navbar-dark">
             <a class="navbar-brand" href="#">LOGO</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
@@ -24,8 +23,8 @@
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item active"><a  href="#sobre">Sobre Mim</a></li>
                     <li><a href="#servicos">Serviços</a></li>
-                    <li><a href="#habilidades">Habilidades</a><li>
-                    <li><a href="#portfolio">Portfólio</a></li>
+                    <li><a href="#habilidades">Habilidades</a>
+]                    <li><a href="#portfolio">Portfólio</a></li>
                     <li><a href="#contato">Contato</a></li>
             </div>
         </nav>
