--- a/index.html
+++ b/index.html
@@ -9,22 +9,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Rafael Pinto | Portfólio</title>
 </head>
+
 <body>
 
 
     <header id="header">
         <nav class="navbar navbar-expand-sm navbar-dark">
             <a class="navbar-brand" href="#">LOGO</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
             </button>
-            
+
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ml-auto">
-                    <li class="nav-item active"><a  href="#sobre">Sobre Mim</a></li>
+                    <li class="nav-item active"><a href="#sobre">Sobre Mim</a></li>
                     <li><a href="#servicos">Serviços</a></li>
                     <li><a href="#habilidades">Habilidades</a>
-]                    <li><a href="#portfolio">Portfólio</a></li>
+                        ]
+                    <li><a href="#portfolio">Portfólio</a></li>
                     <li><a href="#contato">Contato</a></li>
             </div>
         </nav>
@@ -95,8 +98,8 @@
                         Criação de Sites
                     </span>
                     <p class="text">
-                        Desenvolvimento de Sites Profissionais, Lojas virtuais, Pizzaria, etc.
-                    </p>
+                        Sites responsivos para a melhor visualização em dispositivos, adaptados para computador, tablet
+                        e celular sem perder a qualidade em todas as telas. </p>
                 </div>
             </div>
             <div class="service-2">
@@ -105,11 +108,11 @@
                 </div>
                 <div class="sobre-service">
                     <span class="title">
-                        Criação de Sites
+                        Sites responsivos
                     </span>
                     <p class="text">
-                        Desenvolvimento de Sites Profissionais, Lojas virtuais, Pizzaria, etc.
-                    </p>
+                        Sites responsivos para a melhor visualização em dispositivos, adaptados para computador, tablet
+                        e celular sem perder a qualidade em todas as telas.</p>
                 </div>
             </div>
             <div class="service-3">
@@ -118,10 +121,11 @@
                 </div>
                 <div class="sobre-service">
                     <span class="title">
-                        Criação de Sites
+                        Redes Sociais
                     </span>
                     <p class="text">
-                        Desenvolvimento de Sites Profissionais, Lojas virtuais, Pizzaria, etc.
+                        Através dos recursos e serviços oferecidos na internet, disponibilizo auxilio na divulgação do
+                        seu negócio nas rede sociasis e aparecimento para seu público-alvo.
                     </p>
                 </div>
             </div>
@@ -131,10 +135,11 @@
                 </div>
                 <div class="sobre-service">
                     <span class="title">
-                        Criação de Sites
+                        WordPress / Blog
                     </span>
                     <p class="text">
-                        Desenvolvimento de Sites Profissionais, Lojas virtuais, Pizzaria, etc.
+                        Desenvolvimento de Temas, Sites através do Wordpress, com um painel de controle amigável,
+                        Qualquer pessoa sem conhecimento técnico conseguirá gerenciar o site.
                     </p>
                 </div>
             </div>
@@ -144,10 +149,10 @@
                 </div>
                 <div class="sobre-service">
                     <span class="title">
-                        Criação de Sites
+                        Desenvolvedor Front-End
                     </span>
                     <p class="text">
-                        Desenvolvimento de Sites Profissionais, Lojas virtuais, Pizzaria, etc.
+                        Desenvolvedor Front-end com experiência em HTML5, CSS3, Wordpress, JavaScript, Bootstrap.
                     </p>
                 </div>
             </div>
@@ -160,39 +165,39 @@
             <div class="html">
                 <h5>HTML</h5>
                 <img src="assets/img/html.svg" alt="">
-                <p>10 meses de experiência</p>
+                <p>4 meses de experiência</p>
                 <div class="lista-estrelas" style="width: 45%;">
                 </div>
             </div>
             <div class="css">
                 <h5>CSS</h5>
                 <img src="assets/img/css.svg" alt="">
-                <p>10 meses de experiência</p>
+                <p>4 meses de experiência</p>
                 <div class="lista-estrelas" style="width: 45%;">
                 </div>
             </div>
             <div class="javascript">
                 <h5>JAVASCRIPT</h5>
                 <img src="assets/img/javascript.svg" alt="">
-                <p>10 meses de experiência</p>
+                <p>2 semanas de experiência</p>
                 <div class="lista-estrelas" style="width: 22%;">
                 </div>
             </div>
             <div class="mysql">
                 <h5>MYSQL</h5>
-                <p>5 meses de experiência</p>
+                <p>2 meses de experiência</p>
                 <div class="lista-estrelas" style="width: 7%;">
                 </div>
             </div>
             <div class="wordpress">
                 <h5>WORDPRESS</h5>
-                <p>5 meses de experiência</p>
+                <p>3 semanas  de experiência</p>
                 <div class="lista-estrelas" style="width: 15%;">
                 </div>
             </div>
             <div class="bootstrap">
                 <h5>BOOTSTRAP</h5>
-                <p>5 meses de experiência</p>
+                <p>1 semana de experiência</p>
                 <div class="lista-estrelas" style="width: 10%;">
                 </div>
             </div>
@@ -246,12 +251,13 @@
     </footer>
 
 
-    
-  
+
+
 
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"></script> 
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"></script>
 </body>
+
 </html>
