updating styles and images

--- a/index.html
+++ b/index.html
@@ -69,14 +69,17 @@
                 aos estudos. Vejo que estou no caminho certo!
             </p>
             <div class="redes-sociais">
-
                 <p class="linkedin">
-                    <img src="assets/img/linkedin.svg" alt="">
-                    LinkedIn
+                    <a href="https://www.linkedin.com/in/rafael-pinto-da-silva/">
+                        <img src="assets/img/linkedin.svg" alt="">
+                        LinkedIn
+                    </a>
                 </p>
                 <p class="github">
-                    <img src="assets/img/github.svg" alt="">
-                    GitHub
+                    <a href="https://github.com/Rafael-doctom/">
+                        <img src="assets/img/github.svg" alt="">
+                        GitHub
+                    </a>
                 </p>
                 <!-- <p class="github">
                     <img src="assets/img/github.svg" alt="">
@@ -163,40 +166,43 @@
         <h1>Habilidades</h1>
         <div class="habilidades-flex">
             <div class="html">
-                <h5>HTML</h5>
                 <img src="assets/img/html.svg" alt="">
+                <h5>HTML</h5>
                 <p>4 meses de experiência</p>
-                <div class="lista-estrelas" style="width: 45%;">
+                <div class="lista-estrelas" style="width: 43%;">
                 </div>
             </div>
             <div class="css">
-                <h5>CSS</h5>
                 <img src="assets/img/css.svg" alt="">
+                <h5>Css3</h5>
                 <p>4 meses de experiência</p>
-                <div class="lista-estrelas" style="width: 45%;">
+                <div class="lista-estrelas" style="width: 43%;">
                 </div>
             </div>
             <div class="javascript">
-                <h5>JAVASCRIPT</h5>
                 <img src="assets/img/javascript.svg" alt="">
+                <h5>JavaScript</h5>
                 <p>2 semanas de experiência</p>
                 <div class="lista-estrelas" style="width: 22%;">
                 </div>
             </div>
             <div class="mysql">
-                <h5>MYSQL</h5>
+                <img src="assets/img/mysql.svg" alt="">
+                <h5>MySql</h5>
                 <p>2 meses de experiência</p>
-                <div class="lista-estrelas" style="width: 7%;">
+                <div class="lista-estrelas" style="width: 10%;">
                 </div>
             </div>
             <div class="wordpress">
-                <h5>WORDPRESS</h5>
-                <p>3 semanas  de experiência</p>
+                <img src="assets/img/wordpress.svg" alt="">
+                <h5>WordPress</h5>
+                <p>3 semanas de experiência</p>
                 <div class="lista-estrelas" style="width: 15%;">
                 </div>
             </div>
             <div class="bootstrap">
-                <h5>BOOTSTRAP</h5>
+                <img src="assets/img/bootstrap.svg" alt="">
+                <h5>Bootstrap</h5>
                 <p>1 semana de experiência</p>
                 <div class="lista-estrelas" style="width: 10%;">
                 </div>
