--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <header id="header">
         <nav class="navbar navbar-expand-sm navbar-dark">
-            <a class="navbar-brand" href="#">LOGO</a>
+            <a class="navbar-brand" href="#">Rafael Pinto |</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -214,7 +214,7 @@
     <div id="portfolio">
         <h1>Portfólio</h1>
         <div class="lista-portfolio">
-            <div class="portfolio-1">
+            <!-- <div class="portfolio-1">
                 <img src="assets/img/img-portfolio1.png" alt="">
             </div>
             <div class="portfolio-2">
@@ -223,6 +223,24 @@
             <div class="portfolio-3">
                 <img src="assets/img/img-portfolio3.png" alt="">
             </div>
+            <div class="portfolio-3">
+                <img src="assets/img/site-caravan.png" alt="">
+            </div> -->
+
+            <ul>
+                <li> <img src="assets/img/img-portfolio1.png" alt="">
+                </li>
+                <!-- <li>
+                    <img src="assets/img/img-portfolio2.png" alt="">
+                </li> -->
+                <li>
+                    <img src="assets/img/img-portfolio3.png" alt="">
+                </li>
+                <li>
+                    <img src="assets/img/site-caravan.png" alt="">
+                </li>
+                
+            </ul>
         </div>
 
     </div>
