--- a/index.html
+++ b/index.html
@@ -15,6 +15,43 @@
 
     <header id="header">
         <nav class="navbar navbar-expand-sm navbar-dark">
+            <a class="navbar-brand" href="#"></a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <div class="collapse navbar-collapse menu" id="navbarSupportedContent ">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item active"><a href="#sobre">Sobre Mim</a></li>
+                    <li><a href="#servicos">Serviços</a></li>
+                    <li><a href="#habilidades">Habilidades</a>
+
+                    <li><a href="#portfolio">Portfólio</a></li>
+                    <li><a href="#contato">Contato</a></li>
+            </div>
+        </nav>
+        </nav>
+    </header>
+    <main id="main">
+        <div class="introducao">
+            <div class="text">
+                <strong>
+                    Desenvolvimento de aplicações <span>Web</span> e <span>Mobile</span>.
+                </strong>
+                <a href="#contato" class="btn btn-primary">
+                    Saiba Mais
+                </a>
+            </div>
+
+        </div>
+        <div class="imagem-ilustracao">
+            <img src="assets/img/imagem-ilustracao.svg" alt="">
+        </div>
+    </main>
+
+    <!-- <header id="header">
+        <nav class="navbar navbar-expand-sm navbar-dark">
             <a class="navbar-brand" href="#">Rafael Pinto |</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -31,12 +68,12 @@
                     <li><a href="#contato">Contato</a></li>
             </div>
         </nav>
-    </header>
+    </header> -->
 
 
 
     <!-- MAIN -->
-    <main id="main">
+    <!-- <main id="main">
         <div class="name-introducao ">
             <img src="assets/img/img-profissao.gif" alt="">
             <span>Rafael Pinto</span>
@@ -45,7 +82,7 @@
         <div class="imagem-ilustracao ">
             <img src="assets/img/imagem-ilustracao.svg" alt="">
         </div>
-    </main>
+    </main> -->
     <!-- SOBRE -->
     <section id="sobre" class="row m-0">
         <div class="imagem-descricao col-5">
@@ -239,7 +276,7 @@
                 <li>
                     <img src="assets/img/site-caravan.png" alt="">
                 </li>
-                
+
             </ul>
         </div>
 
