--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
     <link rel="stylesheet" href="assets/bootstrap/bootstrap.min.css">
@@ -21,15 +21,31 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
 
+            <div class="collapse navbar-collapse " id="navbarSupportedContent">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item active"><a href="#sobre">Sobre Mim</a></li>
+                    <li><a href="#servicos">Serviços</a></li>
+                    <li><a href="#habilidades">Habilidades</a>
+                    <li><a href="#portfolio">Portfólio</a></li>
+                    <li><a href="#contato">Contato</a></li>
+                </ul>
+            </div>
+
+            <!-- <a class="navbar-brand" href="#"></a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+
             <div class="collapse navbar-collapse menu" id="navbarSupportedContent ">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item active"><a href="#sobre">Sobre Mim</a></li>
                     <li><a href="#servicos">Serviços</a></li>
                     <li><a href="#habilidades">Habilidades</a>
-
                     <li><a href="#portfolio">Portfólio</a></li>
                     <li><a href="#contato">Contato</a></li>
-            </div>
+                </ul> -->
         </nav>
         </nav>
     </header>
@@ -92,7 +108,7 @@
             <h1>Sobre Mim</h1>
             <!-- <h6>Rafael Pinto</h6> -->
             <p>
-                Meu nome é Rafael, tenho 20 anos, moro no Brasil, especificamente em Tatuí, interior de São Paulo.
+                Meu nome é <a href="https://www.linkedin.com/in/rafael-pinto-da-silva/"">Rafael Pinto</a>, tenho 20 anos, moro no Brasil, especificamente em Tatuí, interior de São Paulo.
                 Atualmente, faço
                 faculdade de
                 Análise e Desenvolvimento de Sistema na <a href="">Unopar</a>.
@@ -105,24 +121,24 @@
                 Desde então, venho me dedicando diariamente
                 aos estudos. Vejo que estou no caminho certo!
             </p>
-            <div class="redes-sociais">
-                <p class="linkedin">
-                    <a href="https://www.linkedin.com/in/rafael-pinto-da-silva/">
-                        <img src="assets/img/linkedin.svg" alt="">
-                        LinkedIn
-                    </a>
-                </p>
-                <p class="github">
-                    <a href="https://github.com/Rafael-doctom/">
-                        <img src="assets/img/github.svg" alt="">
-                        GitHub
-                    </a>
-                </p>
-                <!-- <p class="github">
+            <div class=" redes-sociais">
+                    <p class="linkedin">
+                        <a href="https://www.linkedin.com/in/rafael-pinto-da-silva/">
+                            <img src="assets/img/linkedin.svg" alt="">
+                            LinkedIn
+                        </a>
+                    </p>
+                    <p class="github">
+                        <a href="https://github.com/Rafael-doctom/">
+                            <img src="assets/img/github.svg" alt="">
+                            GitHub
+                        </a>
+                    </p>
+                    <!-- <p class="github">
                     <img src="assets/img/github.svg" alt="">
                     Whatsapp
                 </p> -->
-            </div>
+        </div>
         </div>
     </section>
     <!-- SERVIÇOS -->
@@ -305,8 +321,12 @@
         <p>&copy; 2020 | Feito por <a href="">Rafael Pinto</a>
         <p>
         <ul class="lista-redes">
-            <li>LinkedIn</li>
-            <li>GitHub</li>
+            <li> <a href="">
+                    LinkedIn
+                </a></li>
+            <li><a href="">
+                    GitHub
+                </a></li>
         </ul>
         </div>
     </footer>
@@ -315,10 +335,16 @@
 
 
 
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
 
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"></script>
 </body>
 
 </html>
