--- a/index.html
+++ b/index.html
@@ -30,23 +30,6 @@
                     <li><a href="#contato">Contato</a></li>
                 </ul>
             </div>
-
-            <!-- <a class="navbar-brand" href="#"></a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-
-            <div class="collapse navbar-collapse menu" id="navbarSupportedContent ">
-                <ul class="navbar-nav ml-auto">
-                    <li class="nav-item active"><a href="#sobre">Sobre Mim</a></li>
-                    <li><a href="#servicos">Serviços</a></li>
-                    <li><a href="#habilidades">Habilidades</a>
-                    <li><a href="#portfolio">Portfólio</a></li>
-                    <li><a href="#contato">Contato</a></li>
-                </ul> -->
-        </nav>
         </nav>
     </header>
     <main id="main">
@@ -65,40 +48,6 @@
             <img src="assets/img/imagem-ilustracao.svg" alt="">
         </div>
     </main>
-
-    <!-- <header id="header">
-        <nav class="navbar navbar-expand-sm navbar-dark">
-            <a class="navbar-brand" href="#">Rafael Pinto |</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav ml-auto">
-                    <li class="nav-item active"><a href="#sobre">Sobre Mim</a></li>
-                    <li><a href="#servicos">Serviços</a></li>
-                    <li><a href="#habilidades">Habilidades</a>
-                        ]
-                    <li><a href="#portfolio">Portfólio</a></li>
-                    <li><a href="#contato">Contato</a></li>
-            </div>
-        </nav>
-    </header> -->
-
-
-
-    <!-- MAIN -->
-    <!-- <main id="main">
-        <div class="name-introducao ">
-            <img src="assets/img/img-profissao.gif" alt="">
-            <span>Rafael Pinto</span>
-            <p>Desenvolvedor Front-end</p>
-        </div>
-        <div class="imagem-ilustracao ">
-            <img src="assets/img/imagem-ilustracao.svg" alt="">
-        </div>
-    </main> -->
     <!-- SOBRE -->
     <section id="sobre" class="row m-0">
         <div class="imagem-descricao col-5">
@@ -134,10 +83,6 @@
                             GitHub
                         </a>
                     </p>
-                    <!-- <p class="github">
-                    <img src="assets/img/github.svg" alt="">
-                    Whatsapp
-                </p> -->
         </div>
         </div>
     </section>
@@ -250,12 +195,19 @@
                 <img src="assets/img/wordpress.svg" alt="">
                 <h5>WordPress</h5>
                 <p>3 semanas de experiência</p>
-                <div class="lista-estrelas" style="width: 15%;">
+                <div class="lista-estrelas" style="width: 25%;">
                 </div>
             </div>
             <div class="bootstrap">
                 <img src="assets/img/bootstrap.svg" alt="">
                 <h5>Bootstrap</h5>
+                <p>1 semana de experiência</p>
+                <div class="lista-estrelas" style="width: 20%;">
+                </div>
+            </div>
+            <div class="bootstrap">
+                <img src="assets/img/react-native.svg" alt="">
+                <h5>React Native</h5>
                 <p>1 semana de experiência</p>
                 <div class="lista-estrelas" style="width: 10%;">
                 </div>
@@ -267,41 +219,23 @@
     <div id="portfolio">
         <h1>Portfólio</h1>
         <div class="lista-portfolio">
-            <!-- <div class="portfolio-1">
-                <img src="assets/img/img-portfolio1.png" alt="">
-            </div>
-            <div class="portfolio-2">
-                <img src="assets/img/img-portfolio2.png" alt="">
-            </div>
-            <div class="portfolio-3">
-                <img src="assets/img/img-portfolio3.png" alt="">
-            </div>
-            <div class="portfolio-3">
-                <img src="assets/img/site-caravan.png" alt="">
-            </div> -->
-
             <ul>
-                <li> <img src="assets/img/img-portfolio1.png" alt="">
+                <li> <a href="https://rafael-doctom.github.io/agencia-de-viagens/">
+                        <img src="assets/img/img-portfolio1.png" alt="">
+                    </a>
                 </li>
-                <!-- <li>
-                    <img src="assets/img/img-portfolio2.png" alt="">
-                </li> -->
+                <li> <a href="https://rafael-doctom.github.io/site-flexbox/">
+                        <img src="assets/img/img-portfolio3.png" alt="">
+                    </a>
+                </li>
                 <li>
-                    <img src="assets/img/img-portfolio3.png" alt="">
+                    <a href="https://rafael-doctom.github.io/calculo-imc/">
+                        <img src="assets/img/img-portfolio2.png" alt="">
+                    </a>
                 </li>
-                <li>
-                    <img src="assets/img/site-caravan.png" alt="">
-                </li>
-
             </ul>
         </div>
-
     </div>
-    <!--  -->
-
-
-
-
 
     <!-- CONTATO -->
     <div id="contato">
