--- a/index.html
+++ b/index.html
@@ -233,6 +233,11 @@
                         <img src="assets/img/img-portfolio2.png" alt="">
                     </a>
                 </li>
+                <li>
+                    <a href="https://rafael-doctom.github.io/calculo-imc/">
+                        <img src="assets/img/img-portfolio2.png" alt="">
+                    </a>
+                </li>
             </ul>
         </div>
     </div>
