--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="assets/css/reset.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Rafael Pinto | Portfólio</title>
+    <title>Rafael Pinto | Desenvolvedor Front-End</title>
 </head>
 
 <body>
@@ -225,20 +225,14 @@
                     </a>
                 </li>
                 <li> <a href="https://rafael-doctom.github.io/site-flexbox/">
-                        <img src="assets/img/img-portfolio3.png" alt="">
-                    </a>
-                </li>
-                <li>
-                    <a href="https://rafael-doctom.github.io/calculo-imc/">
                         <img src="assets/img/img-portfolio2.png" alt="">
                     </a>
                 </li>
-                <li>
-                    <a href="https://rafael-doctom.github.io/calculo-imc/">
-                        <img src="assets/img/img-portfolio2.png" alt="">
-                    </a>
-                </li>
+             
             </ul>
+        </div>
+        <div class="ver-mais-portfolio">
+            <a class="btn btn-primary" href="portfolio.html" role="button">Ver todos</a>
         </div>
     </div>
 
