--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
                         <img src="assets/img/img-portfolio1.png" alt="">
                     </a>
                 </li>
-                <li> <a href="https://rafael-doctom.github.io/site-flexbox/">
+                <li> <a href="https://rafael-doctom.github.io/caravan/">
                         <img src="assets/img/img-portfolio2.png" alt="">
                     </a>
                 </li>
