--- a/index.html
+++ b/index.html
@@ -251,13 +251,13 @@
 
     <!-- FOOTER -->
     <footer id="footer">
-        <p>&copy; 2020 | Feito por <a href="">Rafael Pinto</a>
+        <p>&copy; 2020 | Feito por <a href="https://www.linkedin.com/in/rafael-pinto-da-silva/">Rafael Pinto</a>
         <p>
         <ul class="lista-redes">
-            <li> <a href="">
+            <li> <a href="https://www.linkedin.com/in/rafael-pinto-da-silva/">
                     LinkedIn
                 </a></li>
-            <li><a href="">
+            <li><a href="https://github.com/Rafael-doctom/">
                     GitHub
                 </a></li>
         </ul>
