--- a/portfolio.html
+++ b/portfolio.html
@@ -23,11 +23,11 @@
             <div class="collapse navbar-collapse " id="navbarSupportedContent">
                 <ul class="navbar-nav ml-auto">
                     <li><a href="index.html">Home</a></li>
-                    <li class="nav-item active"><a href="#sobre">Sobre Mim</a></li>
-                    <li><a href="#servicos">Serviços</a></li>
-                    <li><a href="#habilidades">Habilidades</a>
-                    <li><a href="#portfolio">Portfólio</a></li>
-                    <li><a href="#contato">Contato</a></li>
+                    <li class="nav-item active"><a href="index.html">Sobre Mim</a></li>
+                    <li><a href="index.html">Serviços</a></li>
+                    <li><a href="index.html">Habilidades</a>
+                    <li><a href="index.html">Portfólio</a></li>
+                    <li><a href="index.html">Contato</a></li>
                 </ul>
             </div>
         </nav>
