--- a/index.html
+++ b/index.html
@@ -99,21 +99,8 @@
                         Criação de Sites
                     </span>
                     <p class="text">
-                        Sites responsivos para a melhor visualização em dispositivos, adaptados para computador, tablet
+                        Desenvolvimento de Sites responsivos para a melhor visualização em dispositivos, adaptados para computador, tablet
                         e celular sem perder a qualidade em todas as telas. </p>
-                </div>
-            </div>
-            <div class="service-2">
-                <div class="img-service">
-                    <img src="assets/img/dispositivo-responsivo.svg" alt="">
-                </div>
-                <div class="sobre-service">
-                    <span class="title">
-                        Sites responsivos
-                    </span>
-                    <p class="text">
-                        Sites responsivos para a melhor visualização em dispositivos, adaptados para computador, tablet
-                        e celular sem perder a qualidade em todas as telas.</p>
                 </div>
             </div>
             <div class="service-3">
