--- a/portfolio.html
+++ b/portfolio.html
@@ -51,11 +51,12 @@
                     </a>
                     <h2>Caravan</h2>
                 </div>
-                <!-- <div class="image col-xl-4 col-md-7 p-0 m-0">
-                    <a href="https://rafael-doctom.github.io/calculo-imc/">
+              
+                <div class="image col-xl-4 col-md-7 p-0 m-0">
+                    <a href="https://rafael-doctom.github.io/noticias/">
                         <img src="assets/img/img-portfolio4.png" alt="">
                     </a>
-                    <h2>Cálculo IMC</h2> -->
+                    <h2>Noticias Diárias</h2>
                 </div>
             </div>
         </div>
