--- a/portfolio.html
+++ b/portfolio.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="assets/css/reset.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Rafael Pinto | Desenvolvedor Front-End</title>
+    <title>Portfólio | Desenvolvedor Front-End</title>
 </head>
 
 <body>
@@ -57,6 +57,13 @@
                         <img src="assets/img/img-portfolio4.png" alt="">
                     </a>
                     <h2>Noticias Diárias</h2>
+                </div>
+
+                <div class="image col-xl-4 col-md-7 p-0 m-0">
+                    <a href="https://rafael-doctom.github.io/finans/">
+                        <img src="assets/img/img-portfolio5.png" alt="">
+                    </a>
+                    <h2>Finans</h2>
                 </div>
             </div>
         </div>
