--- a/portfolio.html
+++ b/portfolio.html
@@ -60,8 +60,15 @@
                 </div>
 
                 <div class="image col-xl-4 col-md-7 p-0 m-0">
-                    <a href="https://rafael-doctom.github.io/finans/">
+                    <a href="https://rafael-doctom.github.io/register/">
                         <img src="assets/img/img-portfolio5.png" alt="">
+                    </a>
+                    <h2>DoPlex</h2>
+                </div>
+
+                <div class="image col-xl-4 col-md-7 p-0 m-0">
+                    <a href="https://rafael-doctom.github.io/finans/">
+                        <img src="assets/img/img-portfolio6.png" alt="">
                     </a>
                     <h2>Finans</h2>
                 </div>
