--- a/portfolio.html
+++ b/portfolio.html
@@ -72,6 +72,13 @@
                     </a>
                     <h2>Finans</h2>
                 </div>
+
+                <div class="image col-xl-4 col-md-7 p-0 m-0">
+                    <a href="https://rafael-doctom.github.io/calculo-imc/">
+                        <img src="assets/img/img-portfolio7.png" alt="">
+                    </a>
+                    <h2>Conecta Life</h2>
+                </div>
             </div>
         </div>
     </main>
