--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="assets/css/reset.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Rafael Pinto | Desenvolvedor Front-End</title>
+    <title>Rafael P.da Silva | Desenvolvedor Front-End</title>
 </head>
 
 <body>
@@ -232,7 +232,7 @@
             Entre em contato. estou quase sempre online &#128511;
         </p>
         <a href="https://api.whatsapp.com/send/?phone=5515996563234&text&app_absent=0">
-            Whatsapp: (15)88656-3234</a>
+            Whatsapp: (15)99656-3234</a>
         <p>dasilva.rafaelpt@gmail.com</p>
     </div>
 
