--- a/portfolio.html
+++ b/portfolio.html
@@ -74,7 +74,7 @@
                 </div>
 
                 <div class="image col-xl-4 col-md-7 p-0 m-0">
-                    <a href="https://rafael-doctom.github.io/calculo-imc/">
+                    <a href="https://rafael-doctom.github.io/conecta-life/">
                         <img src="assets/img/img-portfolio7.png" alt="">
                     </a>
                     <h2>Conecta Life</h2>
