--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="assets/css/reset.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Rafael P.da Silva | Desenvolvedor Front-End</title>
+    <title>Rafael P. da Silva | Desenvolvedor Front-End</title>
 </head>
 
 <body>
@@ -252,7 +252,7 @@
     </footer>
 
 
-
+    <script src="script.js"></script>
 
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
