--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
             <div class="javascript">
                 <img src="assets/img/javascript.svg" alt="">
                 <h5>JavaScript</h5>
-                <p>4 semanas de experiência</p>
+                <p>4 semanas de ok</p>
                 
             </div>
             <div class="mysql">
