realizando alteraçoes no codigo

--- a/index.html
+++ b/index.html
@@ -180,6 +180,14 @@
                 <img src="assets/img/react-native.svg" alt="">
                 <h5>React Native</h5>
             </div>
+            <div class="git">
+                <img src="assets/img/git.png" alt="">
+                <h5>Git</h5>
+            </div>
+            <div class="github">
+                <img src="assets/img/github.svg" alt="">
+                <h5>GitHub</h5>
+            </div>
         </div>
     </section>
 
