adicionando imagens ao repositorio

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
             </div>
             <div class="bootstrap">
                 <img src="assets/img/react-native.svg" alt="">
-                <h5>React Native</h5>
+                <h5>React</h5>
             </div>
             <div class="git">
                 <img src="assets/img/git.png" alt="">
