--- a/index.html
+++ b/index.html
@@ -180,13 +180,10 @@
                 <img src="assets/img/react-native.svg" alt="">
                 <h5>React</h5>
             </div>
-            <div class="git">
-                <img src="assets/img/git.png" alt="">
-                <h5>Git</h5>
-            </div>
+        
             <div class="github">
                 <img src="assets/img/github.svg" alt="">
-                <h5>GitHub</h5>
+                <h5>GitHub | Git </h5>
             </div>
         </div>
     </section>
