alterando codigo index

--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
         
             <div class="github">
                 <img src="assets/img/github.svg" alt="">
-                <h5>GitHub | Git </h5>
+                <h5>GitHub </h5>
             </div>
         </div>
     </section>
