codigo index em atualizaçao

--- a/index.html
+++ b/index.html
@@ -24,9 +24,14 @@
             <div class="collapse navbar-collapse " id="navbarSupportedContent">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item active"><a href="#sobre">Sobre Mim</a></li>
-                    <li><a href="#servicos">Serviços</a></li>
+                    <!-- <li><a href="#servicos">Serviços</a></li> -->
                     <li><a href="#habilidades">Habilidades</a>
                     <li><a href="#portfolio">Portfólio</a></li>
+                    <li>
+                        <a href="#certificados">
+                            Certificados
+                        </a>
+                    </li>
                     <li><a href="#contato">Contato</a></li>
                 </ul>
             </div>
@@ -87,7 +92,7 @@
         </div>
     </section>
     <!-- SERVIÇOS -->
-    <section id="servicos">
+    <!-- <section id="servicos">
         <h1>Serviços</h1>
         <div class="servicos-flex">
             <div class="service-1">
@@ -130,7 +135,7 @@
                         Qualquer pessoa sem conhecimento técnico conseguirá gerenciar o site.
                     </p>
                 </div>
-            </div>
+            </div> -->
             <div class="service-5">
                 <div class="img-service">
                     <img src="assets/img/programador.svg" alt="">
@@ -208,6 +213,7 @@
             <a class="btn btn-primary" href="portfolio.html" role="button">Ver todos</a>
         </div>
     </div>
+<!-- CERTIFICADOS -->
 
     <!-- CONTATO -->
     <div id="contato">
