--- a/portfolio.html
+++ b/portfolio.html
@@ -78,6 +78,12 @@
                     </a>
                     <h2>Conecta Life</h2>
                 </div>
+                <div class="image col-xl-4 col-md-7 p-0 m-0">
+                    <a href="https://rafael-doctom.github.io/animaisFantasticos/">
+                        <img src="assets/img/img-portfolio8.jpg" alt="">
+                    </a>
+                    <h2>Animais Fantásticos</h2>
+                </div>
             </div>
         </div>
     </main>
