--- a/index.html
+++ b/index.html
@@ -173,11 +173,11 @@
                 <img src="assets/img/react-native.svg" alt="">
                 <h5>React</h5>
             </div>
-<!--         
+        
             <div class="github">
                 <img src="assets/img/github.svg" alt="">
                 <h5>GitHub </h5>
-            </div> -->
+            </div>
         </div>
     </section>
 
