--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
 
 
     <header id="header">
-        <nav class="navbar navbar-expand-sm navbar-dark">
-            <a class="navbar-brand" href="#"></a>
+        <nav class="navbar navbar-expand-smr-brand" href="#"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
