--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
 
 
     <header id="header">
-        <nav class="navbar navbar-expand" href="#"></a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+        <nav class="navbar navbar-expand-sm ">
+            <a class="navbar-brand " href="#"></a>
+            <button class="navbar-toggler btn-outline-success" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
