--- a/portfolio.html
+++ b/portfolio.html
@@ -38,7 +38,7 @@
                     <h2>Agência de Viagens</h2>
                 </div>
                 <div class="image col-xl-4 col-md-7 p-0 m-0">
-                    <a href="https://rafael-doctom.github.io/site-flexbox/">
+                    <a href="https://rafael-doctom.github.io/FlexBlog/">
                         <img src="assets/img/img-portfolio3.png" alt="">
                     </a>
                     <h2>FlexBlog</h2>
